# routes/api.php
@@ -153,5 +153,6 @@ Route::middleware('auth:sanctum')->group(function () {
         Route::get('/rapport.borne', 'rapportBorne');
         Route::get('/rapport.point-eau-abonne', 'rapportPointEauAbonne');
         Route::get('/rapport.facturations', 'rapportFacturations');
+        Route::get('/rapport.versements', 'versements');
     });
 });
